removed extra commas

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -21,7 +21,7 @@
         "0": "You have arrived at your destination.",
         "1": "You have arrived at <DESTINATION>.",
         "2": "Your destination is on the <RELATIVE_DIRECTION>.",
-        "3": "<DESTINATION> is on the <RELATIVE_DIRECTION>.",
+        "3": "<DESTINATION> is on the <RELATIVE_DIRECTION>."
       },
       "relative_directions": ["left", "right"]
     },
@@ -30,7 +30,7 @@
         "0": "You will arrive at your destination.",
         "1": "You will arrive at <DESTINATION>.",
         "2": "Your destination will be on the <RELATIVE_DIRECTION>.",
-        "3": "<DESTINATION> will be on the <RELATIVE_DIRECTION>",
+        "3": "<DESTINATION> will be on the <RELATIVE_DIRECTION>"
       },
       "relative_directions": ["left", "right"]
     },
@@ -39,7 +39,7 @@
         "0": "You have arrived at your destination.",
         "1": "You have arrived at <DESTINATION>.",
         "2": "Your destination is on the <RELATIVE_DIRECTION>.",
-        "3": "<DESTINATION> is on the <RELATIVE_DIRECTION>.",
+        "3": "<DESTINATION> is on the <RELATIVE_DIRECTION>."
       },
       "relative_directions": ["left", "right"]
     },
